--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:largeHeap="true">
         <activity
             android:name="com.example.newimagefilters.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
